test/compilable/imports/g313stringmixin.d
module imports.g313stringmixin;
void bug()
{
}
