test/fail_compilation/test2830f.d
module imports.2830f;

void foo()
{
    TestAlias a;
}
